<?xml version="1.0"?>
<package format="2">
  <name>tsdf_plusplus_msg</name>
  <version>0.0.0</version>
  <description>Message definitions for TSDF++ ROS interface.</description>

  <maintainer email="uoezdemir@student.ethz.ch">Halil Umut Özdemir</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
